istio/istio/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: owner
spec:
  host: owner
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
