istio/istio/destination-rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: owner
spec:
  host: owner
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: owner
spec:
  host: owner
  subsets:
  - name: v1
    labels:
      version: v1
