istio/istio/virtual-service-owner-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: owner
spec:
  hosts:
    - "*"
  http:
  - route:
    - destination:
        host: owner
        subset: v1
      weight: 50
    - destination:
        host: owner
        subset: v2
      weight: 50
